--- a/charts/datadog/values.yaml
+++ b/charts/datadog/values.yaml
@@ -389,7 +389,7 @@ datadog:
   remoteConfiguration:
     # datadog.remoteConfiguration.enabled -- Set to true to enable remote configuration.
     # Consider using remoteConfiguration.enabled instead
-    enabled: true
+    enabled: false
 
   ## Enable logs agent and provide custom configs
   logs:
@@ -1942,4 +1942,4 @@ remoteConfiguration:
   # remoteConfiguration.enabled -- Set to true to enable remote configuration on the Cluster Agent (if set) and the node agent.
   # This will override `datadog.remoteConfiguration.enabled` and `clusterAgent.admissionController.remoteInstrumentation.enabled`.
   # Preferred way to enable Remote Configuration.
-  enabled: true
+  enabled: false
