Use image that allows instrumenting APM with ns granularity

--- a/charts/datadog/templates/cluster-agent-deployment.yaml
+++ b/charts/datadog/templates/cluster-agent-deployment.yaml
@@ -223,6 +223,20 @@ spec:
           {{- if .Values.datadog.apm.instrumentation.enabled }}
           - name: DD_ADMISSION_CONTROLLER_AUTO_INSTRUMENTATION_APM_ENABLED
             value: "true"
+          - name: DD_APM_INSTRUMENTATION_ENABLED
+            value: "true"
+          {{- end }}
+          {{- if .Values.datadog.apm.instrumentation.enabled_namespaces }}
+          - name: DD_APM_INSTRUMENTATION_ENABLED_NAMESPACES
+            value: {{ .Values.datadog.apm.instrumentation.enabled_namespaces }}
+          {{- end }}
+          {{- if .Values.datadog.apm.instrumentation.disabled_namespaces }}
+          - name: DD_APM_INSTRUMENTATION_DISABLED_NAMESPACES
+            value: {{ .Values.datadog.apm.instrumentation.disabled_namespaces }}
+          {{- end }}
+          {{- if .Values.datadog.apm.instrumentation.lib_versions }}
+          - name: DD_APM_INSTRUMENTATION_LIB_VERSIONS
+            value: {{ .Values.datadog.apm.instrumentation.lib_versions }}
           {{- end }}
           {{- if .Values.datadog.clusterChecks.enabled }}
           - name: DD_CLUSTER_CHECKS_ENABLED
