APM instrumentation increase default memory limit
The default chosen in 7.57.0 of the agent is too low which results in
OOMKills for some of the APM library InitContainers. This is likely due
to a regression in the size of the APM libraries. Once a fix is merged
upstream in the Agent we should add a version gate on this setting so it
only applies to the versions affected.

--- a/charts/datadog/templates/cluster-agent-deployment.yaml
+++ b/charts/datadog/templates/cluster-agent-deployment.yaml
@@ -241,6 +241,8 @@ spec:
           {{- if .Values.datadog.apm.instrumentation.enabled }}
           - name: DD_APM_INSTRUMENTATION_ENABLED
             value: {{ .Values.datadog.apm.instrumentation.enabled | quote }}
+          - name: DD_ADMISSION_CONTROLLER_AUTO_INSTRUMENTATION_INIT_RESOURCES_MEMORY
+            value: 128Mi
           {{- end }}
           {{- if .Values.datadog.apm.instrumentation.enabledNamespaces }}
           - name: DD_APM_INSTRUMENTATION_ENABLED_NAMESPACES
